<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PacMan</string>
    <string name="points">Points: 0</string>
    <string name="action_settings">Settings</string>
    <string name="leftbtn">LEFT</string>
    <string name="rightbtn">RIGHT</string>
    <string name="upbtn">UP</string>
    <string name="downbtn">DOWN</string>
    <string name="new_game">New Game</string>
    <string name="pause">Pause</string>

</resources>
